# rsync-remote-backup

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.in  requirements.txt  rsync_backup.py  setup.cfg
.github/workflows/: main.yml  master.yml
backup/: __init__.py  backup.py
src/: backup.py  config.yaml  config.yaml.example  config.yml.dist  data_classes.py  exceptions.py
tests/: backup_test.py  test_backup.py
