# Reference: https://setuptools.pypa.io/en/latest/userguide/declarative_config.html#declarative-config


[metadata]
name = RSYNC Backup Automation
version = 0.0.1
author = Mortolian
maintainer = Mortolian
keywords = rsync, backup, sync, ssh
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3


[options]
package_dir=
    =src
packages = find:
install_requires = file:requirements.txt
zip_safe = False


[options.packages.find]
where=app


[flake8]
ignore =
    # E501 line too long (80 > 79 characters)
    E501,
    # I001 isort found an import in the wrong position
    I001,
    # I003 isort expected 1 blank line in imports, found 0
    I003,
    # I005 isort found an unexpected missing import
    I005,
    # DUO102 insecure use of "random" module, prefer "random.SystemRandom"
    DUO102,
    # Unecessary variable assignement before return statement.
    R504,
    # isort found an unexpected blank line in imports
    I004